tests/paczka1/fuzzy1/59603360.err
Error in line 5: CvnvE S720 67,0
Error in line 3: Yh2 S720 73,9
Error in line 2: A526 A880 88,2
Error in line 34: yXdE A880 223,7
Error in line 37: CvnvE A526 38,6
